--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   application:
-    name: ai-service
+    name: api-gateway
   config:
     import: optional:configserver:http://localhost:8888
